@@ -1,0 +1,24 @@
+# Generated by Django 2.2.5 on 2019-09-09 14:09
+
+import django.contrib.postgres.fields.jsonb
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('data', '0091_engagement_reference_number'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='office',
+            name='countries',
+            field=models.TextField(blank=True, null=True),
+        ),
+        migrations.AddField(
+            model_name='office',
+            name='countries_data',
+            field=django.contrib.postgres.fields.jsonb.JSONField(blank=True, default=dict, null=True),
+        ),
+    ]
